# mazy-iot

./: .gitignore  README.md  run_idf
esp32/car/LCD-CAN-Speed/: CLAUDE.md  README.md  flash.sh
esp32/car/LCD-CAN-logger/: build.sh  flash.sh  sdkconfig.defaults  speed_graph.html
esp32/car/LCD-CAN-logger/main/: CMakeLists.txt  main.c
esp32/car/LCD-CAN-logger/main/Counter/: Counter.c  Counter.h
esp32/car/LCD-CAN-logger/main/Display/: Display.h
esp32/car/LCD-CAN-logger/main/RGB/: RGB.c  RGB.h
esp32/car/can_speed_control/: CLAUDE.md  CMakeLists.txt  README.md  flash.sh  sdkconfig.defaults
esp32/examples/mazy-test-co2/: CMakeLists.txt  README.md
esp32/examples/mazy-test-sht21/: CMakeLists.txt
esp32/home/mazy-iot-sensor/: CMakeLists.txt  README.md  esp_idf_project_configuration.json  partitions.csv  sdkconfig.defaults
esp32/home/mazy-iot-sensor/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
esp32/test/speed_controller/: CMakeLists.txt
esp8266/co2-monitor-web-of/src/: main.cpp
esp8266/examples/1wire-clean/: 1.sh
esp8266/examples/analog/: 2.sh
esp8266/examples/bldc-l293d/: 1.sh
esp8266/examples/buzzer/: 1.sh
esp8266/examples/dht22-test/: 1.sh
esp8266/examples/led-ws/: 1.sh  test.html
esp8266/examples/ledlights-gyver-ha/: Лампа Гайвера Эффекты.json
esp8266/examples/mazy-iot-connect-test/: platformio.ini-99  upload-prod.sh
esp8266/examples/rgb-test/: 1.sh
esp8266/examples/rpm-hall/: 2.sh
esp8266/examples/servo-test-2/: 1.sh
esp8266/home/home-heater/: upload-prod.sh  (+2 more)
esp8266/robot/: sketch_NodeMCU_Motor_Shield.ino
(+113 files in other folders)
